# buun-curator

./: .dockerignore  .env.example  .gitignore  .markdownlint.yaml  .markdownlintignore  .npmrc  .prettierignore  .tiltignore  CLAUDE.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  Tiltfile  Tiltfile.e2e  docker-entrypoint.sh  drizzle.config.ts  eslint.config.mjs  instrumentation.ts  lefthook.yml  mise.toml  next.config.ts  package.json  playwright.config.ts  proxy.ts  vitest.config.ts
agent/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  pyproject.toml
agent/buun_curator_agent/: __init__.py  cli.py  config.py  logging.py  main.py  temporal.py  tracing.py
agent/buun_curator_agent/agents/: __init__.py  common.py  dialogue.py  research.py
agent/buun_curator_agent/graphs/: __init__.py  research.py
agent/buun_curator_agent/models/: __init__.py  research.py
agent/buun_curator_agent/nodes/: __init__.py  planner.py  retriever.py  writer.py
agent/buun_curator_agent/prompts/: __init__.py  planner.md  writer.md
agent/buun_curator_agent/routes/: __init__.py  ag_ui.py  chat.py  health.py
agent/buun_curator_agent/services/: __init__.py  api.py  embedder.py  entry.py  search.py
agent/buun_curator_agent/tools/: __init__.py  embedding.py  search.py
agent/buun_curator_agent/utils/: __init__.py  llm.py
agent/scripts/: batch_eval.py
agent/tests/: __init__.py  test_research_graph.py  test_research_models.py
app/: globals.css  layout.tsx  page.tsx
db/: index.ts  migrate.ts  schema.ts
docs/: app.md  cli.md  context.md  copilot-chat.md  development.md  fetch-content.md  getting-started.md  llm-evaluation.md  logs-and-tracing.md  query-and-cache.md  terminology.md  testing.md  workflow.md
drizzle/: 0000_init_categories_feeds.sql  0001_add_articles_table.sql  0002_rename_articles_to_entries.sql  0003_add-entries-url-unique-index.sql  0004_add-feed-cache-headers.sql  0005_add_full_content.sql  0006_convert_ids_to_ulid.sql  0007_add_filtered_content.sql  0008_add_raw_html.sql  0009_add_app_settings.sql  0010_add_reddit_tables.sql  0011_add_cascade_delete.sql  0012_add_entry_preference.sql  0013_add_translated_content.sql  0015_add_entry_context.sql  0016_add_entry_enrichments.sql  0017_add_entry_links.sql  0018_add_graph_added_at.sql  0019_add_entry_embedding.sql  0020_extract_feed_options.sql  0021_add_labels.sql  0022_add_labels_name_unique.sql  0023_rename_preference_to_keep.sql  (+2 more)
worker/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
worker/buun_curator/: __init__.py  config.py  health.py  logging.py  reload.py  temporal.py  tracing.py  worker.py
worker/buun_curator/activities/: __init__.py  api.py  cleanup.py  crawl.py  deepl_translate.py  distill.py  embedding.py  enrichment.py  entry_links.py  evaluation.py  fetch.py  github.py  github_rerank.py  global_graph.py  graph_rag_session.py  ms_translate.py  notify.py  search.py  translate.py  web_page_enrichment.py
worker/buun_curator/activities/context/: __init__.py  extract_context.py
worker/buun_curator/chains/: __init__.py  content_processing.py
worker/buun_curator/graph_rag/: __init__.py  base.py  types.py
worker/buun_curator/graphiti/: __init__.py  embedder.py  global_graph.py  session.py
worker/buun_curator/lightrag/: __init__.py  embedder.py  global_graph.py  llm.py
worker/buun_curator/models/: __init__.py  activity_io.py  base.py  context.py  entry.py  sse_events.py  types.py  workflow_io.py
worker/buun_curator/ontology/: __init__.py  buun_curator_ontology.ttl
worker/buun_curator/services/: __init__.py  api.py  content.py  content_processor.py  deepl_translator.py  embedder.py  evaluation.py  feed.py  ms_translator.py  search.py  thumbnail.py
worker/buun_curator/utils/: date.py  trace.py  url.py  youtube.py
worker/buun_curator/workflows/: __init__.py  all_feeds_ingestion.py  content_distillation.py  context_collection.py  deep_research.py  delete_enrichment.py  domain_fetch.py  embedding_backfill.py  entries_cleanup.py  evaluation.py  extract_entry_context.py  fetch_entry_links.py  global_graph_update.py  graph_rebuild.py  preview_fetch.py  progress_mixin.py  reprocess_entries.py  schedule_fetch.py  search_prune.py  search_reindex.py  single_feed_ingestion.py  translation.py  update_entry_index.py
worker/scripts/: __init__.py  check_graphiti_data.py  fetch_content.py  fix_md_tables.py  generate_filtering_dataset.py  generate_multihop_eval_dataset.py  generate_singlehop_eval_dataset.py  graphiti_test.py  run_filtering_on_dataset.py  schedule.py  trigger_workflow.py
worker/tests/: __init__.py  conftest.py
worker/tests/activities/: test_fetch.py
worker/tests/fixtures/html/: article_clean.html  article_with_ads.html  article_with_custom_elements.html
worker/tests/integration/: __init__.py  conftest.py  test_content_fetch.py
worker/tests/services/: conftest.py  test_content.py
worker/tests/unit/: test_config.py
worker/tests/unit/activities/: __init__.py  conftest.py  test_fetch.py
worker/tests/unit/services/: conftest.py
worker/tests/unit/worker/: test_workflow_log_filter.py
worker/tests/unit/workflows/: test_workflow_error_handling.py
worker/tests/workflows/: test_schedule_fetch.py
(+280 files in other folders)
